webapps/slinger/css/player_styles.css
:root {
--GLOBAL-BGCOL:              black;
--GLOBAL-COL:                 white;

--ANCHOR-COL:                   #0095dd;
--ANCHOR-HOVER-COL:             #2255aa;

--INLINE-PLAYLIST-CONTROLS-COL: black;

--CONTROLS-ENABLED-COL:         #72a1dd;

--ROUND-CORNERS1-COL:           #7c7d7d;

--PLAYER-CONTROL-ACTIVE-COL:    #0a0;
--PLAYER-CONTROL-PAUSED-COL:    #eb9a43;
--PLAYER-CONTROL-INACTIVE-COL:  #aaa;

--SELECT-ITEM-HAND-BGCOL:       #0001;
--SELECT-ITEM-HAND-HOVER-BGCOL: #0004;

--NETWORK-SHARED-PLAYER-INST-COL: #aaa;
--NETWORK-SHARED-PLAYER-INST-ICONBLANK-BGCOL: #9d9d9d;
--NETWORK-SHARED-PLAYER-INST-ICONCHKED-BGCOL: #ffffff;
--NETWORK-SHARED-PLAYER-INST-HOVER-COL: #fff;

--TOAST-BGCOL:       rgba(32, 32, 32, 0.7);
--TOAST-DELAY-BGCOL: rgba(255, 255, 255, 0.7);
}

/******** GLobal Applied Styles *********/

/* latin-ext */
@font-face {
  font-family: 'Audiowide';
  font-style: normal;
  font-weight: 400;
  src: url('Audiowide-Regular.woff2') format("woff2");
}

/* latin */
@font-face {
  font-family: 'Orbitron';
  font-style: normal;
  font-weight: 400 900;
  font-display: swap;
  src: url('Orbitron.woff2') format('woff2');
}
*  {
    font-family: 'Orbitron';
}

html, body {
	margin:0;
	padding:0;
	height:100%;
	background: var(--GLOBAL-BGCOL);
	width: fit-content;
}

table {
    border-collapse: collapse;
}

a {
	color: var(--ANCHOR-COL);
	text-decoration:none;
}
a:hover, a:focus {
	color:var(--ANCHOR-HOVER-COL);
	text-decoration:none;
}

/******** Info Toast Styles  *********/

.jq-toast-single {
    background-color: var(--TOAST-BGCOL)  !important;
}
.jq-toast-loaded {
    background:  var(--TOAST-DELAY-BGCOL) !important;
}

/* General */

.showHelpText {
}

.controlEnabled {
    color:var(--CONTROLS-ENABLED-COL) !important;
}

#showHelpTextInfo  {
    padding-left: 10px;
}

#showAbout {
    padding-left: 10px;
}

#showCfgCog {
    padding-left: 10px;
}

#showLogViewer {
    padding-left: 10px;
}

.rcorners1 {
  border-radius: 3px;
  border: 2px solid var(--ROUND-CORNERS1-COL);
  padding: 5px;
}

.rcorners3 {
    border-radius: 3px;
    padding: 5px;
}

.cntrlActive {
    color: var(--PLAYER-CONTROL-ACTIVE-COL) !important;
}

.cntrlPaused {
    color: var(--PLAYER-CONTROL-PAUSED-COL) !important;
}

.cntrlInactive {
    color: var(--PLAYER-CONTROL-INACTIVE-COL) !important;
}


/* ----- JQUERY UI Interface changes ------- */

.ui-button {
  padding: 5px 5px;
}

.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
  padding: 5px 5px;
}

.ui-tabs .ui-tabs-panel {
    padding: 5px 5px;
}
.ui-tabs .ui-tabs-nav {
    margin: 0;
    padding: 0px 0px 0px;
}

.ui-dialog .ui-dialog-content {
    padding: 0px !important;
}


/* jquery ui, no title bar */
.custom-no-titlebar .ui-dialog-titlebar {
    display: none !important;
}

/* --------------------------------------------- */

#playerControlsSmallBig {
    font-size: xx-large;
}

/* --------------------------------------------- */

.player-table {
    width:100%;
}
.player-title {
    font-size:large;
    width:100%;
}

.selectItemHand {
    cursor: pointer;
    background-color: var(--SELECT-ITEM-HAND-BGCOL);
}

.selectItemHand:hover {
    background-color: var(--SELECT-ITEM-HAND-HOVER-BGCOL);
}

.fileNavigatorMain {
    vertical-align:top;
}

/* --------------------------------------------- */

#playerView {
    background: var(--GLOBAL-BGCOL);
    color: var(--GLOBAL-COL);
}

.playerTxt {
    color: var(--GLOBAL-COL);
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

/* --------------------------------------------- */
.overlay-containerSml {
    height: 32px;
    width: 100%;
    position: relative;
}

.overlay-containerSml tr {
    height: 32px;
}

.overlay-containerBig {
    height: 200px;
    width: 100%;
    position: relative;
}

.overlay-playinfo
{
    width: 100%;
    position:sticky;
    top: 0;
    left: 0;
    z-index: 10;
}

#playingInfo td {
    text-wrap: nowrap;
    text-align: left;
}

.song-title {
    padding-left: 20px;
}

.overlay-albumArt {
    width: 100%;
    position:absolute;
    top: 0;
    left: 0;
    z-index: 20;
}
#albumArtURL  {
    position:sticky;
    left: 100%;
    border-radius: 15px;
}
#albumArtURLSml  {
    position:sticky;
    left: 100%;
    border-radius: 5px;
}
.albumArtURLSml
{
    border-radius: 5px;
}
/* --------------------------------------------- */

.controlsIconFont {
    font-size:10px;
    font-family: ui-rounded;
    display: table;
}

.playerControls {
    cursor: pointer;
    color:#aaa;
    vertical-align: middle;
    font-size:x-large;
}

.playerControls:hover, .playerControls:focus
{
   filter: brightness(150%);
   -webkit-animation: glow1 1s ease-in-out infinite alternate;
   -moz-animation: glow1 1s ease-in-out infinite alternate;
   animation: glow1 1s ease-in-out infinite alternate;
}

/* --------------------------------------------- */

#volLevel {
    cursor: pointer;
    width:100%;
}

/* --------------------------------------------- */

.iconStyle24 {
    /* background: transparent; */

    background: #4b4b4b3d;
    height:100%;
    padding: 2px;
    background: 0000007f;
    border-style:none;
    width: 32px;
    border-radius: 2px;
    height: 28px;
}

/* --------------------------------------------- */

#songRangeHeader {
    font-size:10px;
    text-wrap: nowrap;
    text-align: left;
}

#songRangePosition {
    cursor: pointer;
    width:100%;
}

#songRangeFooter {
    font-size:10px;
    text-wrap: nowrap;
    text-align: left;
}

/* --------------------------------------------- */

#currentBrowserPath {
    font-size: smaller;
    font-weight: 700;
    color: #0000ffff;
}

#browserArt {
    padding: 0px;
}

#browserArt img {
    width:64px;
    height:64px;
    border-radius: 5px;
}

#fileBrowser {
    overflow: auto;
}

#fileListParent{
    /* background: #72a1dd; */
    font-size: xxx-large;
    border-width: 1px;
    border-radius: 4px;
    border-color: #4f4f4f;
    border-style: solid;
}
/* ... */

